Fix OpenAPI spec warnings
    $ spectral lint -s operation-operationId-unique openapi/openapi.yaml
    OpenAPI 3.x detected
    No results with a severity of 'error' or higher found!
